--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
         <lombok.version>1.18.22</lombok.version>
         <junit.version>4.13.1</junit.version>
         <org.redisson.version>3.14.1</org.redisson.version>
+        <spring-boot.version>2.7.0</spring-boot.version>
+        <guava.version>31.1-jre</guava.version>
+        <redisson.version>3.35.0</redisson.version>
+
+
     </properties>
 
 
@@ -67,6 +72,26 @@
                 <groupId>io.github.weihubeats</groupId>
                 <artifactId>fluxcache-core</artifactId>
                 <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
         </dependencies>
