--- a/fluxcache-example/pom.xml
+++ b/fluxcache-example/pom.xml
@@ -12,9 +12,27 @@
     <artifactId>fluxcache-example</artifactId>
 
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version>${revision}</version>
     </properties>
+    
+    
+    <dependencies>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+            <groupId>io.github.weihubeats</groupId>
+            <artifactId>fluxcache-all-spring-boot-starter</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        
+    </dependencies>
 
 </project>
