--- a/fluxcache-example/pom.xml
+++ b/fluxcache-example/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>fluxcache-all-spring-boot-starter</artifactId>
             <version>${revision}</version>
         </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         
     </dependencies>
 
