--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <groupId>io.github.weihubeats</groupId>
     <artifactId>fluxcache</artifactId>
     <packaging>pom</packaging>
-    
-    
+
+
     <modules>
         <module>fluxcache-core</module>
         <module>fluxcache-all-spring-boot-starter</module>
@@ -21,7 +21,7 @@
     <name>flux cache</name>
     <description>Multi-level caching framework</description>
     <url>https://github.com/weihubeats/fluxcache</url>
-    
+
 
     <properties>
         <revision>0.0.3</revision>
@@ -33,13 +33,14 @@
         <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
-        <spring-boot.version>2.7.0</spring-boot.version>
+        <spring-boot.version>3.4.1</spring-boot.version>
         <lombok.version>1.18.22</lombok.version>
         <junit.version>4.13.1</junit.version>
         <org.redisson.version>3.14.1</org.redisson.version>
         <spring-boot.version>2.7.0</spring-boot.version>
         <guava.version>31.1-jre</guava.version>
         <redisson.version>3.35.0</redisson.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
@@ -124,10 +125,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>3.11.0</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
