--- a/fluxcache-example/pom.xml
+++ b/fluxcache-example/pom.xml
@@ -37,6 +37,20 @@
             <scope>test</scope>
         </dependency>
         
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.17.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.20.4</version>
+            <scope>test</scope>
+        </dependency>
+        
     </dependencies>
 
 </project>
