--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
                 <configuration>
-                    <skipTests>true</skipTests>
+                    <skipTests>false</skipTests>
                 </configuration>
             </plugin>
             <plugin>
@@ -191,7 +191,7 @@
                 <executions>
                     <execution>
                         <id>sign-artifacts</id>
-                        <phase>verify</phase>
+                        <phase>install</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
@@ -224,6 +224,9 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            
         </plugins>
     </build>
 
